# mario_kart_game_sfml

./: .gitignore  CMakeLists.txt  README.md  README.txt  user.h
include/: Animation.h  Board.h  Button.h  CMakeLists.txt  CareerState.h  CollisionHandling.h  GameStatusBar.h  GetDataState.h  HostState.h  Line.h  Macros.h  MapFileCollision.h  MarioKart.h  MenuState.h  Player.h  RaceState.h  ServiceThread.h  Services.h  SettingsState.h  ShowUsersDataBase.h  SkyLine.h  StateOfMenu.h  TestState.h  UserCareer.h  Utilities.h  WelcomeState.h  helpState.h  mode7.h  user.h  users_project.h
include/GameObjects/: Banana.h  Coin.h  Floor.h  GameObj.h  Ghost.h  MacrosGameObj.h  Mushroom.h  Object.h  Pipe.h  Player.h  PlayerBase.h  PlayerOnline.h  SeconedPlayer.h  SpeedMultiplier.h  StaticObject.h
include/GameTools/: Animation.h  Board.h  Camera.h  CollisionHandling.h  GameStatusBar.h  MacrosGameTools.h  SkyLine.h  SpeedScreen.h  mode7.h
include/GuiItems/: CMakeLists.txt  StartCloud.h  TraficLight.h
include/Machine/: State.h  StateStack.h
include/Models/: CMakeLists.txt  User.h  UserNetwork.h
include/RessourcesClasses/: AnimationData.h  Fonts.h  Pictures.h  Sounds.h
include/States/: AboutState.h  CareerMenu.h  CareerState.h  GarageState.h  GetDataState.h  HostState.h  MenuState.h  SettingsState.h  ShowUsersDataBase.h  StateOfMenu.h  WelcomeState.h  helpState.h
include/States/RaceModes/: CoinRace.h  DriftKingRace.h  MacrosRaceModes.h  OnlineRace.h  RaceStatesBase.h  TimeRace.h
resources/: CMakeLists.txt
resources/Drivers/: CMakeLists.txt
resources/Fonts/: CMakeLists.txt
resources/LoadGame/: CMakeLists.txt  load.txt
resources/Maps/: CMakeLists.txt
resources/Maps/donut_plains/: CMakeLists.txt  donut_plains_start_position.txt
resources/Maps/donut_plains_1/: CMakeLists.txt  base.txt  base_objects.txt
resources/Maps/ghost_valley/: CMakeLists.txt  ghost_valley.txt  ghost_valley_objects.txt  ghost_valley_start_position.txt
resources/Maps/mario_circuit_2/: CMakeLists.txt  mario_circuit_2.txt  mario_circuit_2_obj.txt
resources/Maps/rainbow_road/: CMakeLists.txt  rainbow_road.txt  rainbow_road_objects.txt  rainbow_road_start_position.txt
resources/Pictures/: CMakeLists.txt
resources/Pictures/Speed/: CMakeLists.txt
resources/Sounds/: CMakeLists.txt
src/: Animation.cpp  Board.cpp  Button.cpp  CMakeLists.txt  CareerState.cpp  CollisionHandling.cpp  GameStatusBar.cpp  GetDataState.cpp  HostState.cpp  MapFileCollision.cpp  MarioKart.cpp  MenuState.cpp  RaceState.cpp  Services.cpp  SettingsState.cpp  ShowUsersDataBase.cpp  StateOfMenu.cpp  TestState.cpp  UserCareer.cpp  Utilities.cpp  WelcomeState.cpp  helpState.cpp  main.cpp  mode7.cpp
src/GameObjects/: Banana.cpp  CMakeLists.txt  Coin.cpp  GameObj.cpp  Ghost.cpp  Mushroom.cpp  Pipe.cpp  Player.cpp  PlayerBase.cpp  PlayerOnline.cpp  SeconedPlayer.cpp  SkyLine.cpp  SpeedMultiplier.cpp  StaticObject.cpp
src/GameTools/: Animation.cpp  Board.cpp  CMakeLists.txt  Camera.cpp  CollisionHandling.cpp  GameStatusBar.cpp  SkyLine.cpp  SpeedScreen.cpp  mode7.cpp
src/GuiItems/: CMakeLists.txt  StartCloud.cpp  TraficLight.cpp
src/Machine/: CMakeLists.txt  StateStack.cpp
src/Models/: CMakeLists.txt  User.cpp  UserNetwork.cpp
src/RessourcesClasses/: CMakeLists.txt  Fonts.cpp  Pictures.cpp  Sounds.cpp
src/States/: AboutState.cpp  CMakeLists.txt  CareerMenu.cpp  CareerState.cpp  GarageState.cpp  GetDataState.cpp  HostState.cpp  MenuState.cpp  SettingsState.cpp  ShowUsersDataBase.cpp  StateOfMenu.cpp  WelcomeState.cpp  helpState.cpp
src/States/RaceModes/: CMakeLists.txt  CoinRace.cpp  DriftKingRace.cpp  OnlineRace.cpp  RaceStatesBase.cpp  TimeRace.cpp
