configure_file ("misc.png" ${CMAKE_BINARY_DIR} COPYONLY)
configure_file ("marioLogo.png" ${CMAKE_BINARY_DIR} COPYONLY)
configure_file ("rectangle.jpg" ${CMAKE_BINARY_DIR} COPYONLY)
configure_file ("gameStartGui.png" ${CMAKE_BINARY_DIR} COPYONLY)
configure_file ("menuButtons1.png" ${CMAKE_BINARY_DIR} COPYONLY)
configure_file ("keyboard.png" ${CMAKE_BINARY_DIR} COPYONLY)

add_subdirectory(Speed)

